--- a/1-MemoryGame/assets/css/style.css
+++ b/1-MemoryGame/assets/css/style.css
@@ -63,7 +63,7 @@ html {
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-primary-5) !important;
+  /* background: var(--clr-primary-5) !important; */
   color: var(--clr-grey-5);
   line-height: 1.5;
   font-size: 0.875rem;
